@@ -1,7 +1,6 @@
 package ru.job4j.io;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.io.IOException;
 import java.util.function.Predicate;
@@ -9,10 +8,20 @@ import java.nio.file.Files;
 
 public class Search {
     public static void main(String[] args) throws IOException {
-        Path start = Paths.get(".");
+        validateArgs(args);
+        Path start = Path.of(args[0]);
+        if (!Files.exists(start)) {
+            throw new IllegalArgumentException(
+                    String.format("Директория не существует: %s", start));
+        }
+        if (!Files.isDirectory(start)) {
+            throw new IllegalArgumentException(
+                    String.format("Это не директория: %s", start));
+        }
+        String extension = args[1];
         search(start, path -> path.toFile()
                 .getName()
-                .endsWith(".js"))
+                .endsWith(extension))
                 .forEach(System.out::println);
     }
 
@@ -21,6 +30,15 @@ public class Search {
         SearchFiles searcher = new SearchFiles(condition);
         Files.walkFileTree(root, searcher);
         return searcher.getPaths();
+    }
+
+    public static void validateArgs(String[] args) {
+        if (args.length != 2) {
+            throw new IllegalArgumentException(
+                    "Root folder is null or file extension not specified.\n"
+                            + "Usage  ROOT_FOLDER\n"
+                            + "FILE_EXTENSION\n");
+        }
     }
 }
 
